@@ -1,5 +1,8 @@
 Revision history for Getopt-Euclid
 
+x.x.x
+  - Show --man and --usage in help message
+
 0.3.7
   - Fixed too enthusiastic variable interpolation in Euclid specs (RT bug #78854)
   - Fixed bug tracker URL (credits to Kent Fredric)
